# CG-lab

./: .gitignore  LICENSE  README.md
lab1/: CMakeLists.txt  Frame-inl.h  Interpolation-inl.h  Loader-inl.h  MatrixOp-inl.h  ObjLoader-inl.h  SystemDS.cpp  SystemDS.h  main.cpp
lab1/files/: EULAR_BSpline.in  EULAR_CatmullRom.in  QUA_CatmullRom.in  keyframes-q.in  keyframes.in
lab2/: Interpolation-inl.h  Loader-inl.h  SystemDS.cpp  SystemDS.h  main.cpp
lab2/files/: QUA_BSpline.in  leg1.in  leg2.in  torse.in  walker.des
lab3/: Frame-inl.h  SystemDS.cpp  SystemDS.h
lab3/files/: equal.des  head.in  psys.des
lab4/: Loader-inl.h  MatrixOp-inl.h  SystemDS.cpp  SystemDS.h  main.cpp
lab4/files/: group.des
lab5/: Loader-inl.h  Perlin-inl.h  SystemDS.cpp  SystemDS.h  main.cpp
lab5/files/: equal.des  unequal.des  water.des
